5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1800_2566.log
== TEST (2019-06-06 11:15:56) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)
s=0
t=0
sa=0
for i in v:
	if i == 2:
		s = s + 1
	elif i == 3:
		t = t + 1
	elif i == 7:
		sa = sa + 1
print(s,t,sa)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:17:41) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 7:
		vc[2] = vc[2] + 1
print(vc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:18:29) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 7:
		vc[6] = vc[6] + 1
print(vc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:19:37) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(5, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
print(vc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:19:45) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(5, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
print(vc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:20:19) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
print(vc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:20:32) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
print(vc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:38:40) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
	for i in vc:
		p = (vc[i]*100)/size(v) 
		vc[i] = round(vc[i])
print(vc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:39:14) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
	for i in vc:
		p = (vc[i]*100)/size(v) 
		vc[i] = round(vc[i], 1)
print(vc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:41:27) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
	for i in vc:
		p = (vc[i]*100)/size(v) 
		p = round(vc[i], 1)
print(p)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:43:06) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
	for i in vc:
		p = (vc[i]*100)/size(v) 
		vc[i] = round(vc[i], 1)
print(p)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:43:21) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
	for i in vc:
		p = (vc[i]*100)/size(v) 
		vc[i] = round(vc[i], 1)
print(vc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:44:38) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
	for i in vc:
		vc[i] = (vc[i]*100)/size(v) 
		
print(vc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:45:12) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
	for i in vc:
		vc[i] = (vc[i]*100)/size(v) 
print(vc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:46:16) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
	for i in vc:
		p = (vc[i]*100)/size(v) 
		vc[i] = round(vc[i], 1)
print(vc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:55:40) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
	for i in vc:
		p = (vc[i]*100)/size(v) 
		vc[i] = round(vc[i], 1)
print(vc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:58:33) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
	for i in vc:
		p = (vc[i]*100)/size(v)
		p = vc
		vc[i] = round(vc[i], 1)
print(vc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:59:44) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
	for i in vc:
		p = (vc[i]*100)/size(v)
		vc[i] = round(p, 1)
print(vc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:00:42) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
	for i in range(size(vc)):
		p = (vc[i]*100)/size(v)
		vc[i] = round(p, 1)
print(vc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:02:12) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
	for i in range(size(vc)):
		vc[i] = (vc[i]*100)/size(v)
print(vc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:03:58) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
print(vc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:05:58) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc = (vc[i]*100)/size(v)
print(vc)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:06:21) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
print(vc)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:07:07) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
	vc[i] = round(vc[i], 1)
print(vc)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 12:07:21) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
	vc[i] = round(vc[i], 1)
print(vc)



-- EXECUTION TIME:
1.24823
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:07:30) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
	vc[i] = round(vc[i], 1)
print(vc)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:07:59) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
print(vc)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:08:09) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
print(vc)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 12:08:24) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
print(vc)



-- EXECUTION TIME:
1.01032
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:08:27) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
print(vc)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:09:50) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
	vc[i] = round(vc[i], 1)
print(vc)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 12:10:05) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
	vc[i] = round(vc[i], 1)
print(vc)



-- EXECUTION TIME:
1.121
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:10:05) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
	vc[i] = round(vc[i], 1)
print(vc)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:10:42) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
print(round(vc, 1)



-- ERROR:
File "XXXX", line 24
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:10:50) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
print(round(vc, 1)

-- ERROR:
File "XXXX", line 22
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:11:12) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
print(round(vc, 1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:12:29) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = round((vc[i]*100)/size(v))
print(vc)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 12:12:43) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = round((vc[i]*100)/size(v))
print(vc)	

-- EXECUTION TIME:
1.13793
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[19  0  0 19 25 38]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  8 23  8 15 31]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:12:49) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = round((vc[i]*100)/size(v))
print(vc)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:13:17) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = round((vc[i]*100)/size(v), 1)
print(vc)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 12:13:29) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = round((vc[i]*100)/size(v), 1)
print(vc)	

-- EXECUTION TIME:
1.08037
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:13:30) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = round((vc[i]*100)/size(v), 1)
print(vc)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:13:49) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = round((vc[i]*100)/size(v), 1)
print(vc)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:16:01) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = round((vc[i]*100)/size(v), 2)
print(vc)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:16:13) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = round((vc[i]*100)/size(v), 3)
print(vc)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:16:21) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = round((vc[i]*100)/size(v), 3)
print(vc)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:16:40) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = round(((vc[i]*100)/size(v)), 3)
print(vc)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:16:50) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = round(((vc[i]*100)/size(v)), 1)
print(vc)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 12:17:04) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = round(((vc[i]*100)/size(v)), 1)
print(vc)	

-- EXECUTION TIME:
1.06126
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:17:04) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = round(((vc[i]*100)/size(v)), 1)
print(vc)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:21:33) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
print(vc)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:21:41) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
print(vc)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:22:21) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
	vc = round(vc[i], 1)
print(vc)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:22:37) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
	vc[i] = round(vc[i], 1)
print(vc)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:23:54) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
	vc[0] = round(vc[0], 1)
print(vc)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:25:38) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
a = round(30, 1)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 12:25:47) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
a = round(30, 1)
print(a)

-- EXECUTION TIME:
1.11094
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
30
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
30
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
30
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:25:47) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
a = round(30, 1)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:26:00) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
a = round(30, 1)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:31:37) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=float)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
print(vc)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 12:31:50) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=float)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
print(vc)

-- EXECUTION TIME:
1.0231
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:32:32) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=float)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
print(vc)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:33:38) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=float)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
print(vc)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:34:30) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=float)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
print(vc)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 12:34:40) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=float)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
print(vc)

-- EXECUTION TIME:
0.849473
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:35:40) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=int)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = (vc[i]*100)/size(v)
print(vc)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:36:31) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=float)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = round((vc[i]*100)/size(v), 1)
print(vc)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 12:36:44) 
-- CODE:
from numpy import *
v = array(eval(input("digite: ")))

vc = zeros(6, dtype=float)

for i in v:
	if i == 2:
		vc[0] = vc[0] + 1
	elif i == 3:
		vc[1] = vc[1] + 1
	elif i == 4:
		vc[2] = vc[2] + 1
	elif i == 5:
		vc[3] = vc[3] + 1
	elif i == 6:
		vc[4] = vc[4] + 1
	elif i == 7:
		vc[5] = vc[5] + 1
for i in range(size(vc)):
	vc[i] = round((vc[i]*100)/size(v), 1)
print(vc)

-- EXECUTION TIME:
1.18007
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
